--- a/.github/workflows/sphinx2pages.yml
+++ b/.github/workflows/sphinx2pages.yml
@@ -33,7 +33,9 @@ jobs:
       # Publish docs on gh-pages branch
       - name: Commit documentation
         run: |
-          cd docs/_build/html
+          mkdir gh-pages
+          cp -r docs/_build/html/* gh-pages/
+          cd gh-pages
           git init -b gh-pages
           touch .nojekyll
           git config --local user.email "action@github.com"
